--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,3 +34,8 @@ a{text-decoration:none;font-size:100%;color:#333;outline: none;}
 .wbox-flex {-webkit-flex: 1!important;-webkit-box-flex: 1;}
 .pdl{padding-left:30px;}
 
+/* 空页面 */
+.no-cont{text-align: center;padding:0 15px;position:absolute;top:50%;left:0;right:0;-webkit-transform:translateY(-50%);transform:translateY(-50%);}
+.no-cont .icon{width:80px;height:80px;margin-bottom:20px;}
+.no-cont .tip{margin-bottom:25px;font-size:14px;color:#999;line-height:15px;}
+.no-cont .btn{display:inline-block;width:90px;line-height:30px;border:1px solid #00A43E;color:#00A43E;text-align: center;font-size:13px;border-radius:5px;}
