--- a/src/components/user/user.css
+++ b/src/components/user/user.css
@@ -3,12 +3,12 @@ html,body,#app{height:100%;min-height:100%}
 .user-module{display: flex;-webkit-flex-wrap: wrap; flex-wrap: wrap;-webkit-align-content: space-between;align-content: space-between;min-height:100%} 
 .user-module .bdb:after{background-color:#ccc}
 .user-module .mui-bar-nav{background:transparent;}
-.mui-content{padding:44px 15px;width:100%;}
-.mui-content h1{text-align: center; font-size: 22px; color: #333; padding: 30px 0;}
-.mui-content .login-form .input-row{margin-bottom: 17px;}
-.mui-content .login-form .mui-input-txt{background: none;color: #333; border:none; padding:10px 0;margin-bottom: 3px; font-size: 15px; width: 70%;}
-.mui-content .login-form .iconfont{color:#999; font-size: 18px; position: absolute; right: 5px; top:13px; }
-.mui-content .login-form .submit{height: 45px; line-height: 45px; background: #00a43e;width:100%;padding: 0; color: #fff; font-size: 16px; 
+.user-module .mui-content{padding:44px 15px;width:100%;}
+.user-module .mui-content h1{text-align: center; font-size: 22px; color: #333; padding: 30px 0;}
+.user-module .mui-content .login-form .input-row{margin-bottom: 17px;}
+.user-module .mui-content .login-form .mui-input-txt{background: none;color: #333; border:none; padding:10px 0;margin-bottom: 3px; font-size: 15px; width: 70%;}
+.user-module .mui-content .login-form .iconfont{color:#999; font-size: 18px; position: absolute; right: 5px; top:13px; }
+.user-module .mui-content .login-form .submit{height: 45px; line-height: 45px; background: #00a43e;width:100%;padding: 0; color: #fff; font-size: 16px; 
     border-radius: 6px; margin-top: 15px;opacity: .5;}
 .mui-content .login-form .submit.active{opacity:1}
 .mui-input{width: 100%; overflow: hidden;}
